[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "launch-pad"
version = "0.1.0"
description = "A FastAPI + CLI project for managing software releases"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "typer",
    "sqlalchemy",
    "httpx",
]

[project.scripts]
launch-pad = "cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["app", "cli"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
